start compose email code; forgot pw link fix

--- a/app/src/main/res/layout/app_login_fragment.xml
+++ b/app/src/main/res/layout/app_login_fragment.xml
@@ -15,8 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autoLink="web"
-        android:text="http://www.BeakIt.com"
         tools:text="@string/forgot_password"
+        android:text="http://beakit.com/forgotpassword.php"
         android:gravity="center"
         android:layout_marginBottom="128dp"
         android:layout_weight="0.26"
