some layout fixes

--- a/app/src/main/res/layout/compose_email_fragment.xml
+++ b/app/src/main/res/layout/compose_email_fragment.xml
@@ -108,7 +108,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:inputType="textMultiLine"
-            android:text="Email message here"
+            android:hint="Email message here"
             android:ems="10"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="43dp"
@@ -122,9 +122,10 @@
             />
     </RelativeLayout>
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:layout_weight="1">
 
         <Button
@@ -132,23 +133,14 @@
             android:text="Send Email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginLeft="46dp"
-            android:layout_marginStart="46dp"
-            android:layout_marginTop="32dp" />
+            android:layout_alignLeft="@+id/protect_button"
+            />
 
         <Button
             android:id="@+id/protect_button"
             android:text="Protect this Email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/send_button"
-            android:layout_alignBottom="@+id/send_button"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="74dp"
-            android:layout_marginEnd="74dp" />
-    </RelativeLayout>
+            android:layout_alignRight="@+id/send_button"/>
+    </LinearLayout>
 </LinearLayout>
