--- a/app/src/main/res/layout/app_login_fragment.xml
+++ b/app/src/main/res/layout/app_login_fragment.xml
@@ -1,38 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_dark"
-    android:weightSum="1">
-
-
-    <TextView
-        android:id="@+id/forgot_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:autoLink="web"
-        tools:text="@string/forgot_password"
-        android:text="http://beakit.com/forgotpassword.php"
-        android:gravity="center"
-        android:layout_marginBottom="128dp"
-        android:layout_weight="0.26"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+    >
 
     <ImageView
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         app:srcCompat="@drawable/beak_logo_small"
         android:id="@+id/imageView"
-        android:layout_marginBottom="79dp"
-        android:layout_above="@+id/enter_username"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_height="wrap_content" />
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="50dp"
+        />
 
     <EditText
         android:id="@+id/enter_username"
@@ -41,11 +25,9 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:hint="Enter Login Info"
-        android:layout_marginBottom="18dp"
         android:gravity="center"
         android:layout_above="@+id/enter_password"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        />
 
     <EditText
         android:id="@+id/enter_password"
@@ -54,21 +36,28 @@
         android:inputType="textPassword"
         android:ems="10"
         android:hint="Enter Your Password"
-        android:layout_marginBottom="36dp"
         android:gravity="center"
-        android:layout_weight="0.08"
-        android:layout_above="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginBottom="50dp"
+        />
 
     <Button
         android:id="@+id/button"
         android:text="@string/button_enter"
         android:onClick="login"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="62dp"
-        android:layout_above="@+id/forgot_password"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:autoLink="web"
+        android:text="@string/forgot_password_link"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:gravity="center"
+        />
+
+</LinearLayout>
