--- a/app/src/main/res/layout/app_login_fragment.xml
+++ b/app/src/main/res/layout/app_login_fragment.xml
@@ -27,6 +27,7 @@
         android:hint="Enter Login Info"
         android:gravity="center"
         android:layout_above="@+id/enter_password"
+        android:background="@drawable/textview_design"
         />
 
     <EditText
@@ -38,6 +39,7 @@
         android:hint="Enter Your Password"
         android:gravity="center"
         android:layout_marginBottom="50dp"
+        android:background="@drawable/textview_design"
         />
 
     <Button
@@ -55,9 +57,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:autoLink="web"
-        android:text="@string/forgot_password_link"
+        android:text="http://beakit.com/forgotpassword.php"
+        tools:text="@string/forgot_password_link"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:gravity="center"
+        android:clickable="true"
         />
 
 </LinearLayout>
