fragment work, remove toolbar workaround

--- a/app/src/main/res/layout/compose_email_fragment.xml
+++ b/app/src/main/res/layout/compose_email_fragment.xml
@@ -97,6 +97,7 @@
             android:ems="10"
             android:scrollbars="vertical"
             android:gravity="top|left"
+            android:background="@drawable/textview_design"
             />
     </LinearLayout>
 
