attach add email client; probably will delete

--- a/app/src/main/res/layout/enter_existing_email_fragment.xml
+++ b/app/src/main/res/layout/enter_existing_email_fragment.xml
@@ -62,7 +62,7 @@
         android:text="Connect to your MailBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/button3" />
+        android:id="@+id/enter_connect_client" />
 
     <TextView
         android:layout_width="match_parent"
