2nd rounded corners background fix

--- a/app/src/main/res/layout/main_right_fragment.xml
+++ b/app/src/main/res/layout/main_right_fragment.xml
@@ -3,7 +3,9 @@
     android:id="@+id/list_of_tracked_emails"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/rounded_corner"
+    >
 
     <TextView
         android:layout_width="match_parent"
