--- a/app/src/main/res/layout/dual_screen_main_activity.xml
+++ b/app/src/main/res/layout/dual_screen_main_activity.xml
@@ -20,9 +20,10 @@
     <!--Light-->
 
     <LinearLayout
+        android:id="@+id/main_screen_container"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         >
 
         <FrameLayout
