--- a/app/src/main/res/layout/app_login_fragment.xml
+++ b/app/src/main/res/layout/app_login_fragment.xml
@@ -52,6 +52,7 @@
         android:gravity="center"
         />
 
+    <!--
     <TextView
         android:id="@+id/forgot_password"
         android:layout_width="match_parent"
@@ -63,5 +64,18 @@
         android:gravity="center"
         android:clickable="true"
         />
+     -->
+
+    <TextView
+        android:id="@+id/forgot_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/forgot_password_link"
+        android:gravity="center"
+        android:autoLink="web"
+        android:linksClickable="true"
+        />
+
+
 
 </LinearLayout>
