--- a/app/src/main/res/layout/dual_screen_main_activity.xml
+++ b/app/src/main/res/layout/dual_screen_main_activity.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dual_screen_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -39,9 +40,6 @@
             android:layout_weight="2"
             android:layout_width="0dp"
             />
-
     </LinearLayout>
 
-
-    
 </LinearLayout>
