--- a/app/src/main/res/layout/compose_email_fragment.xml
+++ b/app/src/main/res/layout/compose_email_fragment.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/holo_blue_light"
     android:id="@+id/compose_email_fragment"
-    >
+    tools:context="com.example.emartin.beakproject.ComposeEmailFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -114,6 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/protect_button"
             android:layout_marginLeft="10dp"
+            android:onClick="loadActivity"
             />
 
         <Button
@@ -123,6 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/send_button"
             android:layout_marginLeft="10dp"
+            android:onClick="addProtection"
             />
     </LinearLayout>
 
